$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-4 (opened November 1, 2008)

    * oecosimu: got a new control argument for quantitative null
    model analyses, and this is available if method = "permat".
    The print method and help file modified accordingly.

	* vignettes: Figures with narrower margins. Vignetted
	"diversity-vegan" adds functional diversity ('treedive'), 'beals'
	and 'radfit' graphics updated to current vegan. Still missing
	pieces: nestedness & null models, quantitative null models,
	additive diversity partioninng, Tsallis entropy.

	* radlattice: a new function to display each radfit model in a
	separate panel together with their AIC or BIC values. I wanted to
	have this for a manuscript.

	* plot.cca: takes care that plotted items have non-NULL names that
	plot neatly.  This was already take care of with formula
	interface, but now it should work also in other cases in
	plots. Reported by Daniel Borcard.
	
	* permatwsap: quasiswap method is implemented for count data based
	on the idea of Carsten Dormann in the bipartite::swap.web
	function. This takes a random matrix first with same row and
	column sums as the original (via r2dtable), and than restores the
	original matrix fill through steps of swaping 2x2 submatrices. The
	current R code is slow.

	* permatfull: when both cells and individuals are shuffled, the
	matrix fill remains constant.

	* nesteddisc: replaced with a new function that orders tied
	columns to minimize the discrepancy statistic. If there are <=7
	tied columns, all upto 5040 permutations are inspected, and if
	there are >7 tied columns, 5000 random permutations are
	inspected. The ties are inspected only if they could change order
	of columns within range of row sums (species richness). A warning
	with results is only printed if there were >7 tied columns that
	could influence the statistic, because in other cases the solution
	is certainly correct. The new function may be slow, and a more